Ajustes no botão de Hamburguer Ajustes na tela de login e contatos do mobile

--- a/IFESApp/src/pages/login/login.html
+++ b/IFESApp/src/pages/login/login.html
@@ -1,15 +1,17 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Login</ion-title>
+    <ion-title>Faça seu login</ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding>
   <ion-list>
       <ion-item>
-        <ion-input type="text" placeholder="Email" [(ngModel)]="model.email"></ion-input>
+        <ion-label floating>Informe seu email:</ion-label>
+        <ion-input type="email" [(ngModel)]="model.email"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-input type="password" placeholder="Senha" [(ngModel)]="model.senha"></ion-input>
+        <ion-label floating>Digite sua senha:</ion-label>
+        <ion-input type="password" [(ngModel)]="model.senha"></ion-input>
       </ion-item>
     </ion-list>
     <button ion-button (click)="login()" unlock full>
