--- a/IFESApp/src/pages/login/login.html
+++ b/IFESApp/src/pages/login/login.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Faça seu login</ion-title>
+    <ion-title>FaÃ§a seu login</ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding>
