Inclusão do logo no app

--- a/IFESApp/src/pages/home/home.html
+++ b/IFESApp/src/pages/home/home.html
@@ -1,5 +1,9 @@
 <ion-header>
+    
   <ion-navbar>
+      <ion-avatar item-start>
+      <img alt="logo" height="40" src="../assets/imgs/LogoIFES.png">
+      </ion-avatar>
    <ion-title>IFES</ion-title>
   </ion-navbar>
 </ion-header>
